go/deployment-operator/example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
  labels:
    app: example
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: nginx
